name:                caa-admin
version:             1.0.0
homepage:            http://github.com/metabrainz/caa-admin
license:             GPL-3
license-file:        LICENSE
author:              Oliver Charles
maintainer:          oliver@musicbrainz.org
build-type:          Simple
cabal-version:       >=1.8

executable caa-admin
  main-is: Main.hs
  build-depends:
    base >=4.5 && < 5,
    lens >= 3.9,
    transformers >= 0.3,
    mtl >= 2.1,
    text >= 0.11,
    time >= 1.4,
    blaze-markup >= 0.5,
    acid-state >= 0.12,
    configurator >= 0.2,
    containers >= 0.5,
    safecopy >= 0.8,
    amqp >= 0.5,
    snap >= 0.13,
    snaplet-acid-state >= 0.2,
    blaze-html >= 0.6
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
               -fno-warn-unused-do-bind -Werror
